Fix firefox scrollbar, style it

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,13 @@
 html {
   scroll-behavior: smooth;
+  height: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
+  scrollbar-color:rgb(226, 226, 226)rgb(245, 245, 245);
+  scrollbar-width: thin;
 }
 
-body {
+html, body {
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -11,8 +16,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: 'Open Sans', sans-serif;
-  overflow-y: scroll;
-  overflow-x: hidden;
   width: 100%;
   height: 100%;
   color: #444444;
